# longevity-os

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: baogao.md  bencao.md  daoyin.md  shixiao.md  shiyi.md  yanfang.md  yizheng.md  yuanpan.md  zhenmai.md
data/: db.py
modeling/: causal.py  engine.py  patterns.py  plots.py
scripts/: backup.py  export.py  generate_demo_data.py  import_apple_health.py  import_labs.py  migrate.py  quickstart.py  setup.py
