[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "longevity-os"
version = "0.2.0"
description = "Personal longevity OS — N-of-1 trial engine, causal inference, and multi-agent health tracking"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Albert Ying"},
]
keywords = ["longevity", "n-of-1", "health", "causal-inference", "biological-age", "self-experimentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
seaborn = ["seaborn>=0.13"]

[project.urls]
Homepage = "https://github.com/demar02/longevity-os"
Repository = "https://github.com/demar02/longevity-os"
Upstream = "https://github.com/albert-ying/longevity-os"
